# score-addon-ltc

./: .gitmodules  CMakeLists.txt  README.md  addon.json  ltc.cmake  release.sh  xwax.cmake
LTC/: LTC.cpp  LTC.hpp  LTCInput.hpp  LTCModel.cpp  LTCModel.hpp  LTCUi.hpp  XWax.cpp  XWax.hpp
